--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Photo Gallery</title>
-   < <link rel="stylesheet" href="style6.css">>
+   < <link rel="stylesheet" href="style.css">>
 </head>
 <body>
     <img src="photo1.jpg">
